--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
   <style>
     body {
       font-family: "Poppins", sans-serif;
+      background: url(/img/background.png);
+      /* background-repeat: repeat-x, repeat-y; */
+      /* height: 100%; */
     }
     .blueBackground {
       background-color: #0048b4;
@@ -350,8 +353,8 @@
     }
 
     ul.wordlist li {
-      background: rgba(255, 255, 255, 0.7);
-      padding: 10px;
+      /* background: rgba(255, 255, 255, 0.3); */
+      padding: 15px;
       margin: 3px;
       display: inline-table;
       text-align: center;
@@ -390,8 +393,28 @@
       -ms-user-select: none; /* IE 10 and IE 11 */
       user-select: none; /* Standard syntax */
     }
+
+    .centered {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   </style>
   <body>
+    <div style="width: 100%; position: relative">
+      <img style="width: 100%" src="img/topbanner2.jpg" />
+    </div>
+    <div class="container-fluid whiteContainer">
+      <div class="row">
+        <div class="col" style="text-align: center">
+          <h1>Practica pronunciación con Liza</h1>
+        </div>
+        <div class="col" style="text-align: center">
+          <img style="width: 100%" src="img/topbanner.jpg" />
+        </div>
+      </div>
+    </div>
     <div class="container-fluid whiteContainer">
       <div class="row">
         <div class="col" style="text-align: center">
