--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
         var audio = document.createElement("audio");
         audio.src = `./audios/${el.word}.mp3`;
         audio.id = `audio${el.word}`;
-        audio.preload = "true";
+        // audio.preload = "true";
         li.appendChild(audio);
 
         var div = document.createElement("div");
