Remove el reference

--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
         // document.body.removeEventListener("touchstart", unlockAudio);
 
         evt.target.classList.add("playing");
-        document.getElementById(evt.target.id + "sound").classList.add("bold");
+        // document.getElementById(evt.target.id + "sound").classList.add("bold");
 
         // document.getElementById(`audio${evt.target.id}`).play();
         // document.getElementById(`audio${evt.target.id}`).onended = () => {
