Remove audio tag

--- a/index.html
+++ b/index.html
@@ -572,11 +572,11 @@
         var li = document.createElement("li");
         li.classList.add("wordgroup");
 
-        var audio = document.createElement("audio");
-        audio.src = `./audios/${el.word}.mp3`;
-        audio.id = `audio${el.word}`;
-        // audio.preload = "true";
-        li.appendChild(audio);
+        // var audio = document.createElement("audio");
+        // audio.src = `./audios/${el.word}.mp3`;
+        // audio.id = `audio${el.word}`;
+        // // audio.preload = "true";
+        // li.appendChild(audio);
 
         var div = document.createElement("div");
         div.id = el.word;
