--- a/index.html
+++ b/index.html
@@ -546,37 +546,27 @@
 
       function playSound(word, evt) {
         console.log("playsound", word, evt);
-
-        const sound = new Audio(`./audios/${evt.target.id}.mp3`);
-
-        sound.play();
-        // sound.pause();
-        // sound.currentTime = 0;
-
-        // document.body.removeEventListener("click", unlockAudio);
-        // document.body.removeEventListener("touchstart", unlockAudio);
-
         evt.target.classList.add("playing");
-        // document.getElementById(evt.target.id + "sound").classList.add("bold");
+        document.getElementById(evt.target.id + "sound").classList.add("bold");
 
-        // document.getElementById(`audio${evt.target.id}`).play();
-        // document.getElementById(`audio${evt.target.id}`).onended = () => {
-        //   evt.target.classList.remove("playing");
-        //   document
-        //     .getElementById(evt.target.id + "sound")
-        //     .classList.remove("bold");
-        // };
+        document.getElementById(`audio${evt.target.id}`).play();
+        document.getElementById(`audio${evt.target.id}`).onended = () => {
+          evt.target.classList.remove("playing");
+          document
+            .getElementById(evt.target.id + "sound")
+            .classList.remove("bold");
+        };
       }
 
       function createButton(el) {
         var li = document.createElement("li");
         li.classList.add("wordgroup");
 
-        // var audio = document.createElement("audio");
-        // audio.src = `./audios/${el.word}.mp3`;
-        // audio.id = `audio${el.word}`;
-        // // audio.preload = "true";
-        // li.appendChild(audio);
+        var audio = document.createElement("audio");
+        audio.src = `./audios/${el.word}.mp3`;
+        audio.id = `audio${el.word}`;
+        // audio.preload = "true";
+        li.appendChild(audio);
 
         var div = document.createElement("div");
         div.id = el.word;
