--- a/index.html
+++ b/index.html
@@ -547,11 +547,14 @@
       function playSound(word, evt) {
         console.log("playsound", word, evt);
         evt.target.classList.add("playing");
+        
         document.getElementById(evt.target.id + "sound").classList.add("bold");
-
+        
+        document.getElementById(`audio${evt.target.id}`).currentTime = 0;
         document.getElementById(`audio${evt.target.id}`).play();
         document.getElementById(`audio${evt.target.id}`).onended = () => {
           evt.target.classList.remove("playing");
+          document.getElementById(`audio${evt.target.id}`).currentTime = 0;
           document
             .getElementById(evt.target.id + "sound")
             .classList.remove("bold");
