Make image responsive

--- a/index.html
+++ b/index.html
@@ -405,12 +405,19 @@
     <div style="width: 100%; position: relative">
       <img style="width: 100%" src="img/topbanner2.jpg" />
     </div>
+
+
     <div class="container-fluid whiteContainer">
+      <div class="row">
+        <div class="col d-block d-sm-none" style="text-align: center">
+          <img style="width: 100%" src="img/topbanner.jpg" />
+        </div>
+      </div>
       <div class="row">
         <div class="col" style="text-align: center">
           <h1>Practica pronunciación con Liza</h1>
         </div>
-        <div class="col" style="text-align: center">
+        <div class="col d-none d-sm-block" style="text-align: center">
           <img style="width: 100%" src="img/topbanner.jpg" />
         </div>
       </div>
