--- a/index.html
+++ b/index.html
@@ -20,6 +20,40 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Primary Meta Tags -->
+    <title>Practica pronunciación con Liza</title>
+    <meta name="title" content="Practica pronunciación con Liza" />
+    <meta
+      name="description"
+      content="Presiona en cada botón y repite en voz
+    alta. Practice makes perfect!"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://pronuncia.inglesconliza.com/" />
+    <meta property="og:title" content="Practica pronunciación con Liza" />
+    <meta
+      property="og:description"
+      content="Presiona en cada botón y repite en
+    voz alta. Practice makes perfect!"
+    />
+    <meta property="og:image" content="/img/banner.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://pronuncia.inglesconliza.com/"
+    />
+    <meta property="twitter:title" content="Practica pronunciación con Liza" />
+    <meta
+      property="twitter:description"
+      content="Presiona en cada botón y
+    repite en voz alta. Practice makes perfect!"
+    />
+    <meta property="twitter:image" content="/img/banner.png" />
   </head>
   <style>
     body {
@@ -406,7 +440,6 @@
       <img style="width: 100%" src="img/topbanner2.jpg" />
     </div>
 
-
     <div class="container-fluid whiteContainer">
       <div class="row">
         <div class="col d-block d-sm-none" style="text-align: center">
@@ -554,9 +587,9 @@
       function playSound(word, evt) {
         console.log("playsound", word, evt);
         evt.target.classList.add("playing");
-        
+
         document.getElementById(evt.target.id + "sound").classList.add("bold");
-        
+
         document.getElementById(`audio${evt.target.id}`).currentTime = 0;
         document.getElementById(`audio${evt.target.id}`).play();
         document.getElementById(`audio${evt.target.id}`).onended = () => {
