--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
     <div class="container-fluid whiteContainer">
       <div class="row">
         <div class="col d-block d-sm-none" style="text-align: center">
-          <img style="width: 100%" src="img/topbanner.jpg" />
+          <img style="width: 100%" src="img/liza1.png" />
         </div>
       </div>
       <div class="row">
@@ -451,7 +451,7 @@
           <h1>Practica pronunciación con Liza</h1>
         </div>
         <div class="col d-none d-sm-block" style="text-align: center">
-          <img style="width: 100%" src="img/topbanner.jpg" />
+          <img style="width: 100%" src="img/liza1.png" />
         </div>
       </div>
     </div>
@@ -480,7 +480,16 @@
         <ul id="wordlist3" class="wordlist"></ul>
       </div>
     </div>
-
+    <div class="container-fluid whiteContainer">
+      <div class="row">
+        <div class="col" style="text-align: center">
+          <a href="https://idiomasconliza.com/curso-intensivo-tiempos-verbales/"><img style="width: 100%" src="img/ad.png" /></a>
+        </div>
+      </div>
+    </div>
+    <div style="width: 100%; position: relative">
+      <img style="width: 100%" src="img/topbanner_bottom.jpg" />
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
