--- a/index.html
+++ b/index.html
@@ -442,11 +442,11 @@
 
     <div class="container-fluid whiteContainer">
       <div class="row">
-        <div class="col d-block d-sm-none" style="text-align: center">
+        <div class="col d-block d-sm-none" style="text-align: center; margin-top: -50px;">
           <img style="width: 100%" src="img/liza1.png" />
         </div>
       </div>
-      <div class="row">
+      <div class="row" style="margin-top: -50px;">
         <div class="col" style="text-align: center">
           <h1>Practica pronunciación con Liza</h1>
         </div>
@@ -455,7 +455,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid whiteContainer">
+    <div class="container-fluid whiteContainer" style="margin-top: -100px;">
       <div class="row">
         <div class="col" style="text-align: center">
           <h2>Presiona en cada botón y repite en voz alta:</h2>
