--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 
     <div class="container-fluid whiteContainer">
       <div class="row">
-        <div class="col d-block d-sm-none" style="text-align: center; margin-top: -50px;">
+        <div class="col d-block d-sm-none" style="text-align: center;">
           <img style="width: 100%" src="img/liza1.png" />
         </div>
       </div>
@@ -455,7 +455,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid whiteContainer" style="margin-top: -100px;">
+    <div class="container-fluid whiteContainer" ">
       <div class="row">
         <div class="col" style="text-align: center">
           <h2>Presiona en cada botón y repite en voz alta:</h2>
